Avoid instantiation for conversions
Signed-off-by: Stephen Kitt <skitt@redhat.com>